# assesment-python-django-api

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
apps/posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py
apps/users/: admin.py  authentication.py  forms.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_profile.py
config/: settings.py  urls.py
